--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 	  <img class="img-rounded" alt="Company Logo" src="./img/logo.png"/>
         <h2><em></em></h2>
 		 <ul class="list-inline">
-              <li><i class="fab fa-facebook-f fa-3x"></i></li>
-              <li><i class="fab fa-linkedin fa-3x"></i></li>
-              <li><i class="fab fa-instagram fa-3x"></i></li>
-              <li><i class="fab fa-500px fa-3x"></i></li>
+              <li><a href="https://www.facebook.com/Kovasznai-Photo-269795847306504/"> <i class="fab fa-facebook-f fa-3x" ></i></a></li>
+              <li><a href="https://www.linkedin.com/in/bal%C3%A1zs-kov%C3%A1sznai-13652b192/"> <i class="fab fa-linkedin fa-3x"></i></a></li>
+              <li><a href="https://www.instagram.com/balazskovasznai/"><i class="fab fa-instagram fa-3x"></i></a></li>
+              <li><a href="https://500px.com/balazskovasznai"><i class="fab fa-500px fa-3x"></i></a></li>
 			   
             </ul>	
 			<br>
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <h2>About me</h2>
-            <p class="lead">My name is Balázs Kovásznai. For years I have been riding bmx and  </p>
+            <p class="lead">My name is Balázs Kovásznai. For years I rode bmx and did acrobatics and  </p>
           </div>
         </div>
 	  </div>
@@ -325,7 +325,7 @@
       <div class="container">
         <div class="row">
 		<div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Contact me via email:</h2>
+            <h2>Contact</h2>
             <h4>kovasznaibalazs@gmail.com</h4>
            
     </div>
