--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <li><a href="https://www.linkedin.com/in/bal%C3%A1zs-kov%C3%A1sznai-13652b192/"> <i class="fab fa-linkedin fa-3x"></i></a></li>
               <li><a href="https://www.instagram.com/balazskovasznai/"><i class="fab fa-instagram fa-3x"></i></a></li>
               <li><a href="https://500px.com/balazskovasznai"><i class="fab fa-500px fa-3x"></i></a></li>
+              <li><a href="mailto:kovasznaibalazs@gmail.com"class="far fa-envelope fa-3x"></i></a></li>
 			   
             </ul>	
 			<br>
