problem with the buttons

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 	  <img class="img-rounded" alt="Company Logo" src="./img/logo.png"/>
         <h2><em></em></h2>
 		 <ul class="list-inline">
-              <li><a href="https://www.facebook.com/Kovasznai-Photo-269795847306504/"> <i class="fab fa-facebook-f fa-3x" ></i></a></li>
-              <li><a href="https://www.linkedin.com/in/bal%C3%A1zs-kov%C3%A1sznai-13652b192/"> <i class="fab fa-linkedin fa-3x"></i></a></li>
-              <li><a href="https://www.instagram.com/balazskovasznai/"><i class="fab fa-instagram fa-3x"></i></a></li>
-              <li><a href="https://500px.com/balazskovasznai"><i class="fab fa-500px fa-3x"></i></a></li>
-              <li><a href="mailto:kovasznaibalazs@gmail.com"class="far fa-envelope fa-3x"></i></a></li>
+
+              <li><a class="btn" href="https://www.facebook.com/Kovasznai-Photo-269795847306504/"> <i class="fab fa-facebook-f fa-3x" ></i></a></li>
+              <li><a class="btn" href="https://www.linkedin.com/in/bal%C3%A1zs-kov%C3%A1sznai-13652b192/"> <i class="fab fa-linkedin fa-3x"></i></a></li>
+              <li><a class="btn" href="https://www.instagram.com/balazskovasznai/"><i class="fab fa-instagram fa-3x"></i></a></li>
+              <li><a class="btn" href="https://500px.com/balazskovasznai"><i class="fab fa-500px fa-3x"></i></a></li>
+              <li><a class="btn" href="mailto:kovasznaibalazs@gmail.com"><i class="far fa-envelope fa-3x"></i></a></li>
 			   
             </ul>	
 			<br>
