--- a/index.html
+++ b/index.html
@@ -69,18 +69,19 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
             <h2>About me</h2>
-            <p class="lead">My name is Balázs Kovásznai. For years I rode bmx and did acrobatics,i was into photography in that time too,but after three knee surgeries at the age of 18 I  had to stop bmx and acrobatics so that was the time when I really started to take photography more serious  </p>
+            <p class="lead">My name is Balázs Kovásznai. For years I rode bmx and did acrobatics,i was into photography in that time too,but after three knee surgeries at the age of 18 I  had to stop bmx and acrobatics so that was the time when I really started to take photography more serious. Since that time i tried lot kind of photography, but generally I do not target one specific genre, my primary aim is the expression and enhancement of women’s beauty. The other aim is to show the awesomeness and beautifulness of the action sports to people who are not involved in the actionsports world.In the following galleries the photos are collected not according to their genre either, which would be difficult to do so, as in most of the cases they overlap each other. As an introduction these few lines are fair enough, the pictures will reveal much more about my work. If you like them, I happily take requests to make similar photos. Have fun and enjoy thumbing through the galleries and viewing my photos!   </p>
           </div>
         </div>
 	  </div>
     </div>
     <!-- /About -->
     <!-- Services -->
+    
     <div id="services" class="services">
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Our Services</h2>
+            <h2>What I do</h2>
             <hr>
           </div>
         </div>
@@ -89,26 +90,41 @@
             <div class="service-item">
               <i class="service-icon fa fa-camera-retro fa-3x"></i>
               <h3>Portrait</h3>
-              <p>Ad has dicat ridens consetetur, eos eu option persius. Mollis cotidieque conclusionemque per id, ne nam alienum liberavisse. </p>
+              <hr>
+              <p><h4>Every kind of human depiction:</h4>
+                <div>Portrait</div>
+                <div>Glamour</div>
+                <div>Nude</div>
+                <div>Fashion</div>
+                </p>
             </div>
           </div>
           <div class="col-md-4 text-center">
             <div class="service-item">
 			<i class="service-icon fa fa-camera fa-3x"></i>
-              <h3>Black & white</h3>
-              <p>In mea similique vulputate, ea cum amet malorum dissentiunt. Qui deleniti aliquando cu, ullum soluta his an, id inani salutatus sit.</p>
+              <h3>Sport</h3><hr>
+              <p><h4>Every kind of sports:</h4>
+                <div>Action</div>
+                <div>Motorsports</div>
+                <div>Teamsports</div>
+                <div>Individual Sports</div></p>
             </div>
           </div>
           <div class="col-md-4 text-center">
             <div class="service-item">
               <i class="service-icon fa fa-globe fa-3x"></i>
-              <h3>Web Design</h3>
-              <p>Ad has dicat ridens consetetur, eos eu option persius. Mollis cotidieque conclusionemque per id, ne nam alienum liberavisse.</p>
+              <h3>Event</h3><hr>
+              <p><h4>Every kind of events:</h4>
+                <div>Concerts</div>
+                <div>Teambuildings</div>
+                <div>Sport events</div>
+                <div>Family events</div></p>
             </div>
           </div>
         </div>
       </div>
     </div>
+    
     <!-- /Services -->
 
     <!-- Portfolio -->
@@ -116,7 +132,7 @@
     <div class="container">
     <div class="row push50">
           <div class="col-md-4 col-md-offset-4 text-center">
-            <h2>Our Work</h2>
+            <h2>My work</h2>
 			<h3>
 			<span class="filter label label-default" data-filter="all">ALL</span>
 	<span class="filter label label-default" data-filter="bw">B&amp;W</span>
